--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "eslint-cache",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "support eslint cache",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "node index.js -- ./**/*.js index.js",
+    "release": "standard-version && git push --follow-tags origin master"
   },
   "bin": {
     "eslint-cache": "./index.js"
@@ -21,8 +22,11 @@
   "homepage": "https://github.com/hxfdarling/eslint-cache#readme",
   "dependencies": {
     "commander": "^2.19.0",
+    "debug": "^4.1.1",
+    "eslint-formatter-friendly": "^6.0.0",
     "fs-extra": "^7.0.1",
-    "glob": "^7.1.3"
+    "glob": "^7.1.3",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "commitlint-config-imt": "0.0.4",
