--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "eslint-config-zman": "^0.2.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
-    "prettier": "^1.16.0"
+    "prettier": "^1.16.0",
+    "standard-version": "^4.4.0"
   },
   "lint-staged": {
     "*.{json,css,scss,md}": [
