--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "bin": {
     "eslint-cache": "./index.js"
   },
+  "files": [
+    "lib",
+    "index.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hxfdarling/eslint-cache.git"
